syntax = "proto3";
option go_package = "pipeline";

import "google/protobuf/descriptor.proto";

// Top level classification of the problem.
enum TaskType {
    // Default value. Not to be used.
    TASK_TYPE_UNDEFINED = 0;

    CLASSIFICATION = 1;
    REGRESSION = 2;
    CLUSTERING = 3;
    LINK_PREDICTION = 4;
    VERTEX_NOMINATION = 5;
    COMMUNITY_DETECTION = 6;
    GRAPH_CLUSTERING = 7;
    GRAPH_MATCHING = 8;
    TIME_SERIES_FORECASTING = 9;
    COLLABORATIVE_FILTERING = 10;
    OBJECT_DETECTION = 11;
}

// Secondary classification of the problem.
enum TaskSubtype {
    // Default value. Not to be used.
    TASK_SUBTYPE_UNDEFINED = 0;

    // No secondary task is applicable for this problem.
    NONE = 1;
    BINARY = 2;
    MULTICLASS = 3;
    MULTILABEL = 4;
    UNIVARIATE = 5;
    MULTIVARIATE = 6;
    OVERLAPPING = 7;
    NONOVERLAPPING = 8;
}

// The evaluation metric for any potential solution.
enum PerformanceMetric {
    // Default value. Not to be used.
    METRIC_UNDEFINED = 0;

    // The following are the only evaluation methods required
    // to be supported for the ScoreSolution call.
    ACCURACY = 1;
    PRECISION = 2;
    RECALL = 3;
    F1 = 4;
    F1_MICRO = 5;
    F1_MACRO = 6;
    ROC_AUC = 7;
    ROC_AUC_MICRO = 8;
    ROC_AUC_MACRO = 9;
    MEAN_SQUARED_ERROR = 10;
    ROOT_MEAN_SQUARED_ERROR = 11;
    ROOT_MEAN_SQUARED_ERROR_AVG = 12;
    MEAN_ABSOLUTE_ERROR = 13;
    R_SQUARED = 14;
    NORMALIZED_MUTUAL_INFORMATION = 15;
    JACCARD_SIMILARITY_SCORE = 16;
    PRECISION_AT_TOP_K = 17;
    OBJECT_DETECTION_AVERAGE_PRECISION = 18;

    // The rest are defined to allow expressing internal evaluation
    // scores used by TA2 during pipeline search. If any you are using
    // is missing, feel free to request it to be added.
    // Average loss of an unspecified loss function.
    LOSS = 100;
}

message ProblemPerformanceMetric {
    PerformanceMetric metric = 1;
    // Additional params used by some metrics.
    int32 k = 2;
    string pos_label = 3;
}

message Problem {
    // TODO: Remove deprecated fields in a future version.
    string id = 1 [deprecated=true];
    string version = 2 [deprecated=true];
    string name = 3 [deprecated=true];
    string description = 4 [deprecated=true];
    TaskType task_type = 5;
    TaskSubtype task_subtype = 6;
    repeated ProblemPerformanceMetric performance_metrics = 7;
}

message ProblemTarget {
    int32 target_index = 1;
    string resource_id = 2;
    int32 column_index = 3;
    string column_name = 4;
    int32 clusters_number = 5;
}

message ProblemInput {
    // Should match one of input datasets given to the pipeline search.
    // Every "Dataset" object has an "id" associated with it and is available
    // in its metadata. That ID is then used here to reference those inputs.
    string dataset_id = 1;
    // Targets should resolve to columns in a given dataset.
    repeated ProblemTarget targets = 2;
}

message DataAugmentation {
    repeated string domain = 1;
    repeated string keywords = 2;
}

// Problem description matches the parsed problem description by
// the d3m_metadata.problem.parse_problem_description Python method.
// Problem outputs are not necessary for the purpose of this API
// and are needed only when executing an exported pipeline, but then
// TA2 gets full problem description anyway directly.
message ProblemDescription {
    Problem problem = 1;
    repeated ProblemInput inputs = 2;
    // ID of this problem. Required.
    string id = 3;
    // Version of this problem.
    string version = 4;
    string name = 5;
    string description = 6;
    string digest = 7;
    DataAugmentation data_augmentation = 8;
}
